# Dz_mai_6

./: CMakeLists.txt
task_6/: CMakeLists.txt  task_6.cpp  task_6.h
